# agent-box

./: .env  .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  demo.tape  flake.nix  justfile  todo.md
.github/workflows/: ci.yml  docs-pages.yml  image-publish.yml  nix-image.yml
ab/: Cargo.toml  README.md
ab/src/: main.rs
ab/src/runtime/: docker.rs  mod.rs  podman.rs
adr/: 0001-agent-portal.md
common/: Cargo.toml  README.md
common/src/: config.rs  display.rs  lib.rs  path.rs  portal.rs  portal_client.rs  repo.rs
common/src/runtime/: mod.rs  podman.rs
contrib/systemd/: agent-portal-host.service
docs/: CHARTER.md  book.toml
docs/book/: 404.html  choose-your-path.html  index.html  print.html  searcher-c2a407aa.js  searchindex-593042d7.js  toc-07d51820.js  toc.html
docs/book/explanation/: index.html
docs/book/how-to/: index.html
docs/book/reference/: index.html
docs/scripts/: generate-cli-reference.nu
docs/src/: SUMMARY.md  choose-your-path.md  index.md
docs/theme/: custom.css  lightbox.js
image/: .gitignore  README.md  dockerTools.md  flake.nix  id.nix  image.nu  packages.nix  result
nix/home-manager/: agent-portal.nix
portal/: Cargo.toml  README.md  gh-leaf-command-read-write-report.json  gh-leaf-command-read-write-report.md
portal/scripts/: gh-policy-gen.py  update-gh-policy.sh
portal/src/: lib.rs  logging.rs
portal/tests/: host_integration.rs
src/: config.rs  display.rs  docker.rs  main.rs  path.rs  repo.rs
src/runtime/: docker.rs  mod.rs  podman.rs
wrappers/: Cargo.toml  README.md  gh-wrapper-update-prompt.md
(+57 files in other folders)
