[package]
name = "agent-box"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ab"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
gix = { version = "0.77.0", features = ["blocking-network-client", "status"] }
nix = { version = "0.30.1", features = ["fs"] }
# for compatibility with gitoxide
prodash = { version = "30.0.1", features = [
  "render-line",
  "render-line-crossterm",
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
jj-lib = { version = "0.37.0", features = ["git"] }
eyre = "0.6.12"
inquire = "0.7"
